--- a/Application/Home/View/default/Public/footer.html
+++ b/Application/Home/View/default/Public/footer.html
@@ -1,5 +1,5 @@
 <div class="wrap bottom" style="background:#fff; border-top:#ddd;">
-    <p class="copyright">本系统由<a href="http://weiphp.cn" target="_blank">WeiPHP</a>强力驱动</p>
+    <!-- <p class="copyright">本系统由<a href="http://weiphp.cn" target="_blank">WeiPHP</a>强力驱动</p>-->
 </div>
 
 <include file="Public/var"/>
@@ -8,5 +8,5 @@
 {:hook('pageFooter', 'widget')}
 {$tongji_code}
 <div class="hidden"><!-- 用于加载统计代码等隐藏元素 -->
-	<block name="hidden"></block>
+    <block name="hidden"></block>
 </div>
