重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,4 +1,4 @@
-<include file="_head"></include>
+<include file="{:ADDON_View_PATH}/User/_head"></include>
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
     <!--<header class="mui-bar mui-bar-nav">
@@ -19,6 +19,6 @@
             <span class="mui-tab-label">结算</span>
         </a>
     </nav>
-    <include file="_footer"></include>
+    <include file="{:ADDON_View_PATH}/User/_footer"></include>
 </body>
 </html>
