--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,4 +1,4 @@
-<include file="{:ADDON_View_PATH}/User/_head"/>
+<include file="_head.html"/>
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
@@ -20,6 +20,6 @@
             <span class="mui-tab-label">结算</span>
         </a>
     </nav>
-    <include file="{:ADDON_View_PATH}/User/_footer"/>
+    <include file="_footer.html"/>
 </body>
 </html>
