--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,4 +1,4 @@
-<include file="./Addons/Shop/View/default/User/head"/>
+<include file="./Addons/Shop/View/default/User/head.html"/>
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
