--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,5 +1,6 @@
-<include file="./Addons/Shop/View/default/User/head.html"/>
+<!--<include file="./Addons/Shop/View/default/User/head.html"/>-->
 
+<include file="{:ADDON_View_PATH}/User/head.html"/>
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
     <!--<header class="mui-bar mui-bar-nav">
