重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,6 +1,5 @@
-<!--<include file="./Addons/Shop/View/default/User/head.html"/>-->
+<include file="./Addons/Shop/View/default/User/_head.html"/>
 
-<include file="{:ADDON_View_PATH}/User/head.html"/>
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <body>
     <!--<header class="mui-bar mui-bar-nav">
@@ -21,6 +20,6 @@
             <span class="mui-tab-label">结算</span>
         </a>
     </nav>
-    <include file="_footer.html"/>
+    <include file="./Addons/Shop/View/default/User/_footer.html"/>
 </body>
 </html>
