--- a/Addons/Shop/View/default/Public/user/css/iconfont.css
+++ b/Addons/Shop/View/default/Public/user/css/iconfont.css
@@ -1,16 +1,25 @@
-
-@font-face {font-family: "iconfont";
-  url('../fonts/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+@font-face {
+    font-family: "iconfont";
+    src:url('../fonts/iconfont.ttf') format('truetype'); /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
 }
 
 .iconfont {
-  font-family:"iconfont" !important;
-  font-size:16px;
-  font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: "iconfont" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
 }
-.icon-jiesuanfangshi:before { content: "\e601"; }
-.icon-shuiguo:before { content: "\e602"; }
-.icon-iconfontbasket:before { content: "\e600"; }
+
+.icon-jiesuanfangshi:before {
+    content: "\e601";
+}
+
+.icon-shuiguo:before {
+    content: "\e602";
+}
+
+.icon-iconfontbasket:before {
+    content: "\e600";
+}
