重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -11,11 +11,11 @@
             <span class="mui-icon mui-icon-home"></span>
             <span class="mui-tab-label">果园</span>
         </a>
-        <a class="mui-tab-item mui-active" href="#">
+        <a class="mui-tab-item" href="#">
             <span class="mui-icon iconfont icon-iconfontbasket"></span>
             <span class="mui-tab-label">果篮</span>
         </a>
-        <a class="mui-tab-item mui-active" href="#" style="width: 2%">
+        <a class="mui-tab-item" href="#" style="width: 2%">
             <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
             <span class="mui-tab-label">结算</span>
         </a>
