--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -25,7 +25,7 @@
         <div id="sliderSegmentedControl"
              class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
             <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                <volist name="goodsCategoryList" id="goodsCategory">
+                <volist name="categoryList" id="goodsCategory">
                     <a class="mui-control-item mui-active" href="#item{$vo.id}">
                         {$vo.title}
                     </a>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="mui-slider-group" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-            <volist name="goodsCategoryList" id="goodsCategory">
+            <volist name="categoryList" id="goodsCategory">
                 <div id="item{$vo.id}" class="mui-slider-item mui-control-content mui-active">
                     <div id="scroll{$vo.id}" class="mui-scroll-wrapper">
                         <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
