--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -37,11 +37,10 @@
                 <div id="item{$goodsCategory.id}" class="mui-slider-item mui-control-content mui-active">
                     <div id="scroll{$goodsCategory.id}" class="mui-scroll-wrapper">
                         <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                            <ul class="mui-table-view">
-                                <li class="mui-table-view-cell">
+                            <ul class="mui-table-view mui-grid-view">
+                                <li class="mui-table-view-cell mui-media mui-col-xs-6">
                                     {$goodsCategory.title}
                                 </li>
-
                             </ul>
                             <div class="mui-pull-bottom-tips">
                                 <div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading">上拉显示更多</span></div>
