--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -38,7 +38,7 @@
                     <div id="scroll{$goodsCategory.id}" class="mui-scroll-wrapper">
                         <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
                             <ul class="mui-table-view mui-grid-view">
-                                <li class="mui-table-view-cell mui-media mui-col-xs-6">
+                                <li class="mui-table-view-cell mui-media">
                                     {$goodsCategory.title}
                                 </li>
                             </ul>
