--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -38,9 +38,11 @@
                     <div id="scroll{$goodsCategory.id}" class="mui-scroll-wrapper">
                         <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
                             <ul class="mui-table-view mui-grid-view">
-                                <li class="mui-table-view-cell mui-media">
-                                    {$goodsCategory.title}
-                                </li>
+                                <volist name="goodsList" id="goods">
+                                    <li class="mui-table-view-cell mui-media">
+                                        <img src="{$goods.cover|get_cover_url}"/>
+                                    </li>
+                                </volist>
                             </ul>
                             <div class="mui-pull-bottom-tips">
                                 <div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading">上拉显示更多</span></div>
@@ -59,46 +61,47 @@
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
-<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript"
+        src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>
 <script>
 
     mui.init();
-    (function($) {
+    (function ($) {
         //阻尼系数
-        var deceleration = mui.os.ios?0.003:0.0009;
+        var deceleration = mui.os.ios ? 0.003 : 0.0009;
         $('.mui-scroll-wrapper').scroll({
             bounce: false,
             indicators: true, //是否显示滚动条
-            deceleration:deceleration
+            deceleration: deceleration
         });
-        $.ready(function() {
+        $.ready(function () {
             //循环初始化所有下拉刷新，上拉加载。
             $.each(document.querySelectorAll('.mui-slider-group .mui-scroll'),
-                    function(index, pullRefreshEl) {
-                $(pullRefreshEl).pullToRefresh({
-                    /*down: {
-                        callback: function() {
-                            var self = this;
-                            setTimeout(function() {
-                                var ul = self.element.querySelector('.mui-table-view');
-                                ul.insertBefore(createFragment(ul, index, 10, true), ul.firstChild);
-                                self.endPullDownToRefresh();
-                            }, 1000);
-                        }
-                    },*/
-                    up: {
-                        callback: function() {
-                            var self = this;
-                            setTimeout(function() {
-                                var ul = self.element.querySelector('.mui-table-view');
-                                ul.appendChild(createFragment(ul, index, 5));
-                                self.endPullUpToRefresh();
-                            }, 1000);
-                        }
-                    }
-                });
-            });
-            var createFragment = function(ul, index, count, reverse) {
+                    function (index, pullRefreshEl) {
+                        $(pullRefreshEl).pullToRefresh({
+                            /*down: {
+                             callback: function() {
+                             var self = this;
+                             setTimeout(function() {
+                             var ul = self.element.querySelector('.mui-table-view');
+                             ul.insertBefore(createFragment(ul, index, 10, true), ul.firstChild);
+                             self.endPullDownToRefresh();
+                             }, 1000);
+                             }
+                             },*/
+                            up: {
+                                callback: function () {
+                                    var self = this;
+                                    setTimeout(function () {
+                                        var ul = self.element.querySelector('.mui-table-view');
+                                        ul.appendChild(createFragment(ul, index, 5));
+                                        self.endPullUpToRefresh();
+                                    }, 1000);
+                                }
+                            }
+                        });
+                    });
+            var createFragment = function (ul, index, count, reverse) {
                 var length = ul.querySelectorAll('li').length;
                 var fragment = document.createDocumentFragment();
                 var li;
