--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -39,7 +39,7 @@
                         <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
                             <ul class="mui-table-view mui-grid-view">
                                 <volist name="goodsList" id="goods">
-                                    <li class="mui-table-view-cell mui-media">
+                                    <li class="mui-table-view-cell mui-media" style="width: 50%">
                                         <img src="{$goods.cover|get_cover_url}"/>
                                     </li>
                                 </volist>
