重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -51,9 +51,9 @@
                                     </if>
                                 </volist>
                             </ul>
-                            <div class="mui-pull-bottom-tips">
+                           <!--<div class="mui-pull-bottom-tips">
                                 <div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading">上拉显示更多</span></div>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="mui-scrollbar mui-scrollbar-vertical">
                             <div class="mui-scrollbar-indicator"
