--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -41,7 +41,7 @@
                             <ul class="mui-table-view mui-grid-view">
                                 <volist name="goodsList" id="goods">
                                     <if condition="$goodsCategory.id eq 0">
-                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
+                                        <li class="mui-table-view-cell mui-media">
                                             <a>
                                                 <img class="mui-media-object mui-pull-left" src="{$goods.cover|get_cover_url}"/>
                                                 <div class="mui-media-body">
@@ -51,7 +51,7 @@
                                             </a>
                                         </li>
                                     <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
-                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
+                                        <li class="mui-table-view-cell mui-media">
                                             <a>
                                                 <img class="mui-media-object mui-pull-left" src="{$goods.cover|get_cover_url}"/>
                                                 <div class="mui-media-body">
