重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -38,7 +38,7 @@
                     <div id="scroll{$goodsCategory.id}" class="mui-scroll-wrapper">
                         <div id="{$goodsCategory.id}" class="mui-scroll"
                              style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                            <ul class="mui-table-view mui-grid-view">
+                            <ul class="mui-table-view">
                                 <volist name="goodsList" id="goods">
                                     <if condition="$goodsCategory.id eq 0">
                                         <li class="mui-table-view-cell mui-media">
