--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -1,6 +1,14 @@
 <include file="./Addons/Shop/View/default/User/_head.html"/>
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+<style type="text/css">
+    .mui-table-view .mui-media-object{
+        line-height:5.4375rem;
+        height: 5.4375rem;
+        max-width: 3.75rem;
+    }
+
+</style>
 <body>
 <!--<header class="mui-bar mui-bar-nav">
     <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
