--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -2,14 +2,16 @@
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <style type="text/css">
-    .mui-table-view .mui-media-object{
-        line-height:6rem;
+    .mui-table-view .mui-media-object {
+        line-height: 6rem;
         height: 6rem;
         max-width: 4rem;
     }
+
     .oblique-tag.oblique-tag-presell {
         background: #2c9eff;
     }
+
     .oblique-tag {
         position: absolute;
         top: 0;
@@ -22,12 +24,13 @@
         font-size: .6875rem;
         text-align: center;
         vertical-align: baseline;
-        -webkit-transform: translate(-.6875rem,1.9375rem) rotate(-45deg);
-        transform: translate(-.6875rem,1.9375rem) rotate(-45deg);
+        -webkit-transform: translate(-.6875rem, 1.9375rem) rotate(-45deg);
+        transform: translate(-.6875rem, 1.9375rem) rotate(-45deg);
         -webkit-transform-origin: 0 0;
         transform-origin: 0 0;
     }
-    i{
+
+    i {
         margin: 0;
         padding: 0;
         border: 0;
@@ -80,18 +83,23 @@
                                     <if condition="$goodsCategory.id eq 0">
                                         <li class="mui-table-view-cell mui-media">
                                             <a>
-                                                <img class="mui-media-object mui-pull-left" src="{$goods.cover|get_cover_url}"/>
-                                                <i class="oblique-tag oblique-tag-presell">热卖</i>
+                                                <div>
+                                                    <img class="mui-media-object mui-pull-left"
+                                                         src="{$goods.cover|get_cover_url}"/>
+                                                    <i class="oblique-tag oblique-tag-presell">热卖</i>
+                                                </div>
                                                 <div class="mui-media-body">
                                                     {$goods.title}
                                                     <p class="mui-ellipsis">{$goods.content}</p>
                                                 </div>
                                             </a>
                                         </li>
-                                    <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
+                                        <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
                                         <li class="mui-table-view-cell mui-media">
                                             <a>
-                                                <img class="mui-media-object mui-pull-left" src="{$goods.cover|get_cover_url}"/>
+                                                <img class="mui-media-object mui-pull-left"
+                                                     src="{$goods.cover|get_cover_url}"/>
+
                                                 <div class="mui-media-body">
                                                     {$goods.title}
                                                     <p class="mui-ellipsis">{$goods.content}</p>
@@ -101,9 +109,9 @@
                                     </if>
                                 </volist>
                             </ul>
-                           <!--<div class="mui-pull-bottom-tips">
-                                <div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading">上拉显示更多</span></div>
-                            </div>-->
+                            <!--<div class="mui-pull-bottom-tips">
+                                 <div class="mui-pull-bottom-wrapper"><span class="mui-pull-loading">上拉显示更多</span></div>
+                             </div>-->
                         </div>
                         <div class="mui-scrollbar mui-scrollbar-vertical">
                             <div class="mui-scrollbar-indicator"
