--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -8,6 +8,17 @@
         max-width: 3.75rem;
     }
 
+    .mui-table-view .mui-media-object.mui-pull-left{
+        margin: 0;
+    }
+
+    .mui-table-view .mui-media, .mui-table-view .mui-media-body{
+        padding: 0.375rem 0.75rem;
+        position: relative;
+        overflow: hidden;
+        height: 5.4375rem;
+    }
+
     .oblique-tag.oblique-tag-presell {
         background: #2c9eff;
     }
@@ -36,6 +47,7 @@
         height: 5.4375rem;
         background-color: #e1e1e1;
         overflow: hidden;
+        float: left;
     }
 
     i {
